--- a/index.html
+++ b/index.html
@@ -6,30 +6,103 @@
     <title>Document</title>
 </head>
 <body>
-    {{.Title}}
+    <!-- {{.Title}} -->
     <canvas id="canvas" width="800" height="600">
 
     </canvas>
+    <script src="src/graphics.js">
+        
+    </script>
     <script src="src/engine.js"></script>
     <script>
+
+        var graphics = new Graphics("canvas");
+        graphics.getGL();
+        
+        class GLDraw extends KairaEngine.Component{
+            constructor(Projectile = new KairaEngine.Projectile){
+                super();
+                this.Projectile = Projectile;
+            }
+            update(){
+                graphics.setShaders();
+                graphics.setBuffers({
+                    position: {
+                        numberOfComponents: 3, // X and Y ordered pair coordinates
+                        data: new Float32Array([
+                            (0.0 * this.Projectile.transform.scale.x) + this.Projectile.transform.position.x, (0.5 * this.Projectile.transform.scale.y) + this.Projectile.transform.position.y, 0,
+                            (-0.5 * this.Projectile.transform.scale.x) + this.Projectile.transform.position.x, (-0.5 * this.Projectile.transform.scale.y) + this.Projectile.transform.position.y, 0,
+                            (0.5 * this.Projectile.transform.scale.x) + this.Projectile.transform.position.x, (-0.5 * this.Projectile.transform.scale.y) + this.Projectile.transform.position.y, 0,
+                        ])
+                    },
+                    color: { 
+                        numberOfComponents: 3, // RGB triple
+                        data: new Float32Array([1, 0, 0, 0, 1, 0, 0, 0, 1])
+                    }
+                });
+                graphics.use();
+                console.log(123);
+            }
+        }
+
         var a = new KairaEngine.Vector2();
         var b = new KairaEngine.Vector2(1,2);
         //{{.}}
         var i = 0;
-        var p = new KairaEngine.Projectile(new KairaEngine.Vector2(0,0));
-        p.addComponent(
+        var p1 = new KairaEngine.Projectile(new KairaEngine.Transform(
+            new KairaEngine.Vector2(-1,0),
+            new KairaEngine.Vector2(.5,.5)
+        ));
+        p1.addComponent(
             new KairaEngine.Rigidbody(
-                Projectile = p,
-                velocity = new KairaEngine.Vector2(1,1),
-                accelation = new KairaEngine.Vector2(-1,-1)
+                Projectile = p1,
+                velocity = new KairaEngine.Vector2(1,0),
+                accelation = new KairaEngine.Vector2(0,0)
             )
         );
+        var p2 = new KairaEngine.Projectile(new KairaEngine.Transform(
+            new KairaEngine.Vector2(1,0),
+            new KairaEngine.Vector2(.5,.5)
+        ));
+        p2.addComponent(
+            new KairaEngine.Rigidbody(
+                Projectile = p2,
+                velocity = new KairaEngine.Vector2(-1,0),
+                accelation = new KairaEngine.Vector2(0,0)
+            )
+        );
+
+        p1.addComponent(new GLDraw(p1));
+        p2.addComponent(new GLDraw(p2));
         KairaEngine.update = function(){
+            graphics.clearColor();
+            /*
             KairaEngine.Graphics = new Graphics("canvas");
             KairaEngine.Graphics.getGL();
             KairaEngine.Graphics.clearColor();
-            KairaEngine.Graphics.setShaders();
-            p.update();
+            */
+            /*
+            if (!p1.components[0].onCollisionEnter(p2.components[0])){
+                p1.update();
+                p2.update();
+
+            //console.log(p1.components[0].onCollisionEnter(p2.components[0]));
+            }
+            else {
+                console.log(31);
+            }
+            */
+           console.log(p1.transform.position.distance(p2.transform.position));
+           console.log(p1.components[0].onCollisionEnter(p2.components[0]));
+           p1.update();
+           p2.update();
+           if (p1.transform.position.distance(p2.transform.position) < p1.transform.scale.x){
+                p1.components[0].velocity = p1.components[0].velocity.multiple(-1);
+                p1.components[0].accelation = p1.components[0].accelation.multiple(-1);
+
+                p2.components[0].velocity = p2.components[0].velocity.multiple(-1);
+                p2.components[0].accelation = p2.components[0].accelation.multiple(-1);
+            }
             /*
             graph.setBuffers({
                 position: {
